# zooplus-senior-ai-engineer-challenge

./: .gitignore  AGENTS.md  README.md  SUBMISSION.md
apps/api/: .env.example  Makefile  README.md  __init__.py  alembic.ini  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260622_01_create_product_catalog_entries.py
apps/api/docs/architecture/: first-delivery.md  overview.md  second-delivery.md
apps/api/docs/specs/: assistant-api-runtime.md  dataset-grounded-retrieval.md
apps/api/requests/: chat-success.http  chat-validation-failure.http
apps/api/requests/internal/: product.http
apps/api/requests/public/: chat.http
apps/api/scripts/: README.md  product_catalog_embedding_backfill.py  product_catalog_feed.py
apps/api/src/application/: __init__.py  answer_generator.py  chat_use_case.py  response_context.py
apps/api/src/application/model/: __init__.py  response_context.py
apps/api/src/application/service/: __init__.py  off_topic_query_policy.py
apps/api/src/application/services/: topic_service.py
apps/api/src/application/use_case/: __init__.py  chat_use_case.py
apps/api/src/core/: __init__.py
apps/api/src/domain/: __init__.py  chat.py  chat_result.py  product.py  query.py
apps/api/src/features/: __init__.py
apps/api/src/infrastructure/: __init__.py
apps/api/tests/: test_integration_api.py
apps/api/tests/application/: test_chat_use_case.py  test_product_embedding_use_case.py
apps/api/tests/e2e/: test_llm_chat.py  test_manual_runtime.py
apps/api/tests/infrastructure/: test_runtime_imports.py
(+105 files in other folders)
