[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zooplus-assistant-api"
version = "0.1.0"
description = "FastAPI PoC for product-grounded assistant"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "pgvector>=0.4,<1",
    "pydantic>=2.13,<3",
    "python-dotenv>=1,<2",
    "sqlalchemy>=2.0,<3",
    "uvicorn>=0.30,<1",
]

[dependency-groups]
lint = [
    "ruff>=0.12,<1",
]

test = [
    # Starlette's TestClient in the current FastAPI lockset resolves to httpx2 first
    # and falls back to deprecated httpx compatibility only when httpx2 is absent.
    "httpx2>=2.4,<3",
    "pytest>=9.0.3,<10",
]

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
markers = [
    "e2e: manual end-to-end tests excluded from the default suite",
]
